--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>cls-13,performance-9|Kashpia-Tasnova</title>
+    <title>cls-13,performance-9|cls-13-performance|Kashpia-Tasnova</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
